--- a/services/market-orders-downloader/package.json
+++ b/services/market-orders-downloader/package.json
@@ -12,7 +12,7 @@
     "pre-commit:test": "npm run test",
     "pre-commit:prettier": "./node_modules/.bin/prettier --write .",
     "pre-commit": "npm run pre-commit:lint && npm run pre-commit:tsc && npm run pre-commit:test && npm run pre-commit:prettier",
-    "prepare": "node ./dev/data-types-generator.js"
+    "generate-types": "node ./dev/data-types-generator.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,8 @@
     "@swc/core": "^1.3.95",
     "@swc/jest": "^0.2.29",
     "@tsconfig/node18": "^18.2.2",
+    "@types/bluebird": "^3.5.41",
+    "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/node": "^18.18.7",
     "@types/uuid": "^9.0.6",
@@ -38,8 +40,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.438.0",
     "axios": "^1.4.0",
+    "bluebird": "^3.7.2",
     "csv-stringify": "^6.4.0",
+    "express": "^4.18.2",
     "moment": "^2.29.4"
   },
   "engines": {
