--- a/aws-infrastructure/package.json
+++ b/aws-infrastructure/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^9.0.7",
     "cdk": "^2.103.1"
+  },
+  "dependencies": {
+    "uuid": "^9.0.1"
   }
 }
