--- a/services/market-orders-downloader/docker/Dockerfile.queue_market_orders_for_download
+++ b/services/market-orders-downloader/docker/Dockerfile.queue_market_orders_for_download
@@ -1,19 +1,19 @@
-FROM node:18 as transpiler
+FROM node:18-bookworm-slim as transpiled_service
 WORKDIR /usr/app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM node:18 as dependency_installer
+FROM node:18-bookworm-slim as service_dependencies
 WORKDIR /usr/app
 COPY package*.json ./
 RUN npm install --omit=dev
 
-FROM node:18 as final
+FROM node:18-bookworm-slim as final
 WORKDIR /opt
-COPY --from=transpiler /usr/app/dist/ ./
-COPY --from=dependency_installer /usr/app/ ./
+COPY --from=transpiled_service /usr/app/dist/ ./
+COPY --from=service_dependencies /usr/app/node_modules ./node_modules
 EXPOSE 8080
 
 CMD [ "node", "./handlers/queue-market-orders-for-download.js"]
