--- a/services/market-orders-downloader/package.json
+++ b/services/market-orders-downloader/package.json
@@ -40,6 +40,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.456.0",
     "@aws-sdk/client-sqs": "^3.438.0",
     "axios": "^1.4.0",
     "bluebird": "^3.7.2",
